# starter

./: .dockerignore  .gitignore  AGENTS.md  PROJECT.md  README.md  biome.json  components.json  docker-compose.yml  env.docker.example  lefthook.yml  package.json  tsconfig.json  turbo.json
.cursor/rules/: clean-code.mdc  project-conventions.mdc
.github/workflows/: ci.yml
.turbo/cache/: 23c5a2f5e9dd33b6-meta.json  23c5a2f5e9dd33b6.tar.zst  7a4ff0e27a233d4e-meta.json  7a4ff0e27a233d4e.tar.zst
.turbo/daemon/: 58b9f58664e739b0-turbo.log.2026-02-10
apps/c/: .clang-tidy  README.md  justfile  package.json
apps/hono-api/: .env.example  .gitignore  Dockerfile  package.json  prisma.config.ts
apps/python-api/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pyproject.toml
apps/python-api/src/: __init__.py  config.py  database.py  main.py
apps/python-api/src/api/: auth.py  deps.py
apps/python-api/src/core/: __init__.py  security.py
apps/python-api/src/models/: __init__.py  base.py  user.py
apps/python-api/src/schemas/: __init__.py  auth.py  user.py
apps/rust/: Cargo.toml  README.md
apps/rust-api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package.json
apps/rust-api/migrations/: 001_create_users.sql
apps/rust-api/src/: auth.rs  config.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  routes.rs  schemas.rs  state.rs
apps/web/: next.config.ts  package.json  tsconfig.json
docs/: QoL.md  docker.md
scripts/: .shellcheckrc  README.md  main.sh
scripts/bash/: main.sh
scripts/git-hooks/: README.md  check-large-files.sh  check-secrets.sh  commit-msg-check.sh  fix-trailing-whitespace.sh
scripts/lua/: main.lua
scripts/python/: main.py  (+1 more)
(+197 files in other folders)
